2009-01-05  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-show-compilation-log): Insert two lines at
	the beginning.  Emacs 21 seems to skip over those two.

2009-01-05  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-sbcl.lisp (function-arglist):
	SB-INTROSPECT:FUNCTION-ARGLIST is deprecated in bleeding edge sbcl.

2009-01-05  Tobias C. Rittweiler  <tcr@freebits.de>

	Do not truncate error messages in SLDB.

	* swank.lisp (*sldb-bitvector-length*): Like *PRINT-LENGTH* for
	bit-vectors.
	(*sldb-string-length*): Likewise for strings.
	(*sldb-pprint-dispatch-table*): Truncate bit-vectors / strings
	according to the above variables.
	(*sldb-printer-bindings*): Use the new variables. Bind
	*PRINT-LINES* to NIL so error messages are not truncated.

2009-01-04  Helmut Eller  <heller@common-lisp.net>

	Make it possible to limit the number of displayed restarts.

	* slime.el (sldb-initial-restart-limit)
	(sldb-insert-more-restarts): New.
	(sldb-setup, sldb-insert-restarts): Use it.

2009-01-04  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-local-variable-p): New function. XEmacs requires
	two arguments.

2009-01-04  Helmut Eller  <heller@common-lisp.net>

	* swank-cmucl.lisp (note-error-location): If possible, include the
	filename.
	* slime.el (slime-goto-location-position): Add :eof as position
	kind.

2009-01-03  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-goto-location-buffer): Don't goto point-min.
	(slime-check-location-buffer-name-sanity)
	(slime-check-location-filename-sanity): Separated from
	slime-goto-location-buffer.
	(slime-line-number-at-pos): New compatibility function.

2009-01-03  Helmut Eller  <heller@common-lisp.net>

	By default, show compiler notes in a buffer with compilation-mode.

	* slime.el (slime-show-compilation-log)
	(slime-maybe-show-compilation-log): New functions,
	(slime-compilation-finished-hook): Change the default value
	to 'slime-maybe-show-compilation-log.
